src/rust/names/snapshots/syn_state_machine__rust__names__paths__qualified_tests__concat_idents! (parse it_matches_simple_paths).snap
---
source: src/rust/names/paths.rs
expression: "crate::parse::<QualifiedPathInType<Ident>>(q.clone())"
---
Ok(
    QualifiedPathInType {
        qualifier: QualifiedPathType {
            ty: Ident(
                hello,
            ),
            as_ty: Some(
                HigherOrderPath {
                    leading: false,
                    segments: Interlace {
                        values: [
                            Bare(
                                Id(
                                    Ident(
                                        Default,
                                    ),
                                ),
                            ),
                        ],
                    },
                },
            ),
        },
        path: Rep(
            [
                P2(
                    P2(
                        FJointPunct(
                            Span,
                        ),
                        FPunct(
                            Span,
                        ),
                    ),
                    Bare(
                        Id(
                            Ident(
                                Default,
                            ),
                        ),
                    ),
                ),
            ],
        ),
    },
)
