src/rust/names/snapshots/syn_state_machine__rust__names__paths__qualified_tests__it_matches_simple_paths.snap
---
source: src/rust/names/paths.rs
expression: "insta_match_test!(+ parse QualifiedPathInType<Ident> : < hello as Default > ::\n    Default)"
---
Ok(
    QualifiedPathInType {
        qualifier: QualifiedPathType {
            ty: Ident(
                hello,
            ),
            as_ty: Some(
                HigherOrderPath {
                    leading: false,
                    segments: MinLength(
                        Interlace {
                            values: [
                                Bare(
                                    Id(
                                        Identifier(
                                            Ident(
                                                Default,
                                            ),
                                        ),
                                    ),
                                ),
                            ],
                        },
                    ),
                },
            ),
        },
        path: [
            (
                (
                    FJointPunct(
                        Span,
                    ),
                    FPunct(
                        Span,
                    ),
                ),
                Bare(
                    Id(
                        Identifier(
                            Ident(
                                Default,
                            ),
                        ),
                    ),
                ),
            ),
        ],
    },
)
